--- a/public/css/app.css
+++ b/public/css/app.css
@@ -742,12 +742,17 @@ select {
 .m-0 {
   margin: 0px;
 }
-.m-2 {
-  margin: 0.5rem;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 .my-2 {
   margin-top: 0.5rem;
@@ -825,8 +830,8 @@ select {
 .mt-\[15vh\] {
   margin-top: 15vh;
 }
-.mb-10 {
-  margin-bottom: 2.5rem;
+.-mt-16 {
+  margin-top: -4rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
@@ -839,6 +844,9 @@ select {
 }
 .mt-\[10vh\] {
   margin-top: 10vh;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .mt-\[7vh\] {
   margin-top: 7vh;
@@ -891,14 +899,20 @@ select {
 .h-\[300px\] {
   height: 300px;
 }
-.h-\[150px\] {
-  height: 150px;
+.h-auto {
+  height: auto;
+}
+.h-48 {
+  height: 12rem;
 }
 .h-4 {
   height: 1rem;
 }
-.h-\[\] {
-  height: ;
+.h-12 {
+  height: 3rem;
+}
+.h-\[150px\] {
+  height: 150px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -912,8 +926,11 @@ select {
 .w-full {
   width: 100%;
 }
-.w-\[33\%\] {
-  width: 33%;
+.w-\[600px\] {
+  width: 600px;
+}
+.w-\[48\%\] {
+  width: 48%;
 }
 .w-8 {
   width: 2rem;
@@ -944,29 +961,29 @@ select {
 .w-\[460px\] {
   width: 460px;
 }
-.w-\[600px\] {
-  width: 600px;
-}
 .w-\[500px\] {
   width: 500px;
-}
-.w-\[300px\] {
-  width: 300px;
-}
-.w-\[50\%\] {
-  width: 50%;
-}
-.w-10 {
-  width: 2.5rem;
-}
-.w-\[150px\] {
-  width: 150px;
 }
 .w-48 {
   width: 12rem;
 }
+.w-4\/5 {
+  width: 80%;
+}
+.w-10 {
+  width: 2.5rem;
+}
+.w-\[300px\] {
+  width: 300px;
+}
+.w-\[150px\] {
+  width: 150px;
+}
 .w-4 {
   width: 1rem;
+}
+.w-\[50\%\] {
+  width: 50%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -982,6 +999,9 @@ select {
 }
 .max-w-md {
   max-width: 28rem;
+}
+.max-w-4xl {
+  max-width: 56rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1031,8 +1051,14 @@ select {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
+}
+.flex-wrap {
+  flex-wrap: wrap;
 }
 .items-center {
   align-items: center;
@@ -1055,17 +1081,14 @@ select {
 .gap-4 {
   gap: 1rem;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
 .gap-1 {
   gap: 0.25rem;
 }
-.gap-14 {
-  gap: 3.5rem;
-}
 .gap-3 {
   gap: 0.75rem;
-}
-.gap-2 {
-  gap: 0.5rem;
 }
 .gap-5 {
   gap: 1.25rem;
@@ -1119,6 +1142,9 @@ select {
 .rounded-full {
   border-radius: 9999px;
 }
+.rounded-none {
+  border-radius: 0px;
+}
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1171,6 +1197,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1199,6 +1229,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
 .bg-indigo-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
@@ -1211,8 +1245,14 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
+.bg-cover {
+  background-size: cover;
+}
 .bg-clip-padding {
   background-clip: padding-box;
+}
+.bg-center {
+  background-position: center;
 }
 .bg-no-repeat {
   background-repeat: no-repeat;
@@ -1291,14 +1331,14 @@ select {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+.pr-4 {
+  padding-right: 1rem;
+}
 .pt-1 {
   padding-top: 0.25rem;
 }
 .pl-3 {
   padding-left: 0.75rem;
-}
-.pr-4 {
-  padding-right: 1rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -1318,8 +1358,17 @@ select {
 .pt-\[10vh\] {
   padding-top: 10vh;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
+.pb-16 {
+  padding-bottom: 4rem;
+}
 .pt-6 {
   padding-top: 1.5rem;
+}
+.pt-32 {
+  padding-top: 8rem;
 }
 .text-left {
   text-align: left;
@@ -1350,6 +1399,10 @@ select {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
 .text-\[20px\] {
   font-size: 20px;
 }
@@ -1362,14 +1415,14 @@ select {
 .font-semibold {
   font-weight: 600;
 }
-.font-\[700\] {
-  font-weight: 700;
-}
 .font-bold {
   font-weight: 700;
 }
 .font-\[500\] {
   font-weight: 500;
+}
+.font-\[700\] {
+  font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1385,6 +1438,9 @@ select {
 }
 .leading-tight {
   line-height: 1.25;
+}
+.leading-normal {
+  line-height: 1.5;
 }
 .leading-none {
   line-height: 1;
@@ -1451,6 +1507,14 @@ select {
   --tw-text-opacity: 1;
   color: rgb(96 165 250 / var(--tw-text-opacity));
 }
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1463,10 +1527,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
-.text-blue-100 {
-  --tw-text-opacity: 1;
-  color: rgb(219 234 254 / var(--tw-text-opacity));
-}
 .text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
@@ -1478,6 +1538,12 @@ select {
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.opacity-75 {
+  opacity: 0.75;
+}
+.opacity-25 {
+  opacity: 0.25;
 }
 .opacity-0 {
   opacity: 0;
@@ -1503,6 +1569,11 @@ select {
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-lg {
@@ -1932,16 +2003,93 @@ select {
   .md\:border-l {
     border-left-width: 1px;
   }
+
+  .md\:p-12 {
+    padding: 3rem;
+  }
 }
 @media (min-width: 1024px) {
+
+  .lg\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 
   .lg\:mt-0 {
     margin-top: 0px;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-screen {
+    height: 100vh;
+  }
+
+  .lg\:h-\[380px\] {
+    height: 380px;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-2\/5 {
+    width: 40%;
+  }
+
+  .lg\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .lg\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
+  .lg\:rounded-l-lg {
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+  }
+
+  .lg\:rounded-r-none {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .lg\:text-left {
+    text-align: left;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 @media (min-width: 1280px) {
